    and --best-memattr options for reporting local memory nodes and filtering
    by memory attributes.
  + hwloc-bind has a new --best-memattr option for filtering by memory attributes
    among the memory binding set.
  + Tools that have a --restrict option may now receive a nodeset or
    some custom flags for restricting the topology.
  + Fix lstopo drawing when autoresizing on Windows 10.
  + Pressing the F5 key in lstopo X11 and Windows graphical/interactive outputs
    now refreshes the display according to the current topology and binding.
  + Add a tikz lstopo graphical backend to generate picture easily included into
    LaTeX documents.
* Misc
  + The default installation path of the Bash completion file has changed to
    ${datadir}/bash-completion/completions/hwloc


Version 2.2.0
-------------
* API
  + Add hwloc_bitmap_singlify_by_core() to remove SMT from a given cpuset,
    thanks to Florian Reynier for the suggestion.
  + Add --enable-32bits-pci-domain to stop ignoring PCI devices with domain
    >16bits (e.g. 10000:02:03.4). Enabling this option breaks the library ABI.
    Thanks to Dylan Simon for the help.
* Backends
  + Add support for Linux cgroups v2.
  + Add NUMA support for FreeBSD.
  + Add get_last_cpu_location support for FreeBSD.
  + Remove support for Intel Xeon Phi (MIC, Knights Corner) co-processors.
* Tools
  + Add --uid to filter the hwloc-ps output by uid on Linux.
  + Add a GRAPHICAL OUTPUT section in the manpage of lstopo.
* Misc
  + Use the native dlopen instead of libltdl,
    unless --disable-plugin-dlopen is passed at configure time.


Version 2.1.0
-------------
* API
  + Add a new "Die" object (HWLOC_OBJ_DIE) for upcoming x86 processors
    with multiple dies per package, in the x86 and Linux backends.
  + Add the new HWLOC_OBJ_MEMCACHE object type for memory-side caches.
    - They are filtered-out by default, except in command-line tools.
    - They are only available on very recent platforms running Linux 5.2+