@@ -319,6 +319,13 @@ The option was included in \fB\-\-gridsize\fR prior to hwloc 2.1 (and its defaul
 
 This option is ignored in the ASCII backend.
 .TP
+\fB\-\-thickness\fR <size>
+Set the thickness of lines and boxes in the graphical output.
+
+The default is 1.
+
+This option is ignored in the ASCII backend.
+.TP
 \fB\-\-horiz\fR, \fB\-\-horiz\fR=<type1,...>
 Force a horizontal graphical layout instead of nearly 4/3 ratio in the graphical output.
 If a comma-separated list of object types is given, the layout only
