@@ -1,5 +1,6 @@
 /*
  * Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.
+ * Copyright © 2020 Inria.  All rights reserved.
  * See COPYING in top-level directory.
  */
 
@@ -55,8 +56,8 @@ tikz_box(struct lstopo_output *loutput, const struct lstopo_color *lcolor, unsig
   FILE *file = loutput->file;
   int r = lcolor->r, g = lcolor->g, b = lcolor->b;
 
-  fprintf(file, "\t\\filldraw [fill=hwloc-color-%d-%d-%d,draw=black,line width=1pt] (%u,%u) rectangle ++(%u,%u);\n",
-          r, g, b, x, y, width, height);
+  fprintf(file, "\t\\filldraw [fill=hwloc-color-%d-%d-%d,draw=black,line width=%upt] (%u,%u) rectangle ++(%u,%u);\n",
+          r, g, b, loutput->thickness, x, y, width, height);
 }
 
 
@@ -66,8 +67,8 @@ tikz_line(struct lstopo_output *loutput, const struct lstopo_color *lcolor, unsi
   FILE *file = loutput->file;
   int r = lcolor->r, g = lcolor->g, b = lcolor->b;
 
-  fprintf(file, "\t\\draw [draw=hwloc-color-%d-%d-%d,line width=1pt] (%u,%u) -- (%u,%u);\n",
-          r, g, b, x1, y1, x2, y2);
+  fprintf(file, "\t\\draw [draw=hwloc-color-%d-%d-%d,line width=%upt] (%u,%u) -- (%u,%u);\n",
+          r, g, b, loutput->thickness, x1, y1, x2, y2);
 }
 
 static void
