@@ -185,6 +185,7 @@ WndProc(HWND hwnd, UINT message, WPARAM wparam, LPARAM lparam)
 
     case WM_PAINT: {
       HFONT font;
+      HPEN pen;
 #ifdef HWLOC_HAVE_GCC_W_MISSING_FIELD_INITIALIZERS
 #pragma GCC diagnostic ignored "-Wmissing-field-initializers"
 #endif
@@ -195,6 +196,8 @@ WndProc(HWND hwnd, UINT message, WPARAM wparam, LPARAM lparam)
       BeginPaint(hwnd, &the_output.ps);
       font = CreateFont(loutput->fontsize, 0, 0, 0, 0, FALSE, FALSE, FALSE, DEFAULT_CHARSET, OUT_DEFAULT_PRECIS, CLIP_DEFAULT_PRECIS, DEFAULT_QUALITY, DEFAULT_PITCH, NULL);
       SelectObject(the_output.ps.hdc, (HGDIOBJ) font);
+      pen = CreatePen(PS_SOLID, loutput->thickness, RGB(0,0,0));
+      SelectObject(the_output.ps.hdc, pen);
       SetBkMode(the_output.ps.hdc, TRANSPARENT);
       loutput->drawing = LSTOPO_DRAWING_PREPARE;
       output_draw(loutput);
@@ -223,6 +226,7 @@ WndProc(HWND hwnd, UINT message, WPARAM wparam, LPARAM lparam)
       loutput->drawing = LSTOPO_DRAWING_DRAW;
       windows_box(loutput, &white, 0, 0, win_width, 0, win_height, NULL, 0);
       output_draw(loutput);
+      DeleteObject(pen);
       DeleteObject(font);
       EndPaint(hwnd, &the_output.ps);
       break;
